Added cover image

--- a/report/final.tex
+++ b/report/final.tex
@@ -4,6 +4,8 @@
 \usepackage{lmodern}
 \usepackage{xcolor}
 \usepackage{tikz,graphics,color,fullpage,float,epsf,caption,subcaption,tabularx, hyperref}
+\usepackage{wallpaper}
+
 
 
 \usepackage[margin=1in]{geometry}
@@ -21,8 +23,9 @@
     Computer Science Department\\
     University of California, Los Angeles\\
     Spring 2015\\
-    Git repository: \texttt{https://github.com/asanciangco/PackManager}
+    Git repository: \texttt{https://github.com/asanciangco/PackManager} \\[5\baselineskip]
 
+    \includegraphics[width=150pt]{img/pacman.png}
     \vfill
     {\large
 	Alex Sanciangco\\
