Updated to show autocomplete

--- a/report/final.tex
+++ b/report/final.tex
@@ -263,10 +263,10 @@ See Fig.\ref{fig:ui} for some screen shots of the user interface.
 \begin{figure}
     \centering
     \begin{tabular}{ccc}
-    \includegraphics[scale=0.2]{img/ui-2.jpg} & \includegraphics[scale=0.2]{img/ui-1.jpg} & \includegraphics[scale=0.2]{img/ui-7.jpg}\\
+    \includegraphics[scale=0.2]{img/ui-2.jpg} & \includegraphics[width=151pt]{img/ui-8.png} & \includegraphics[scale=0.2]{img/ui-7.jpg}\\
     \includegraphics[scale=0.2]{img/ui-5.jpg} & \includegraphics[scale=0.2]{img/ui-6.jpg} & \includegraphics[scale=0.2]{img/ui-4.jpg}
     \end{tabular}
-    \caption{User interface snapshots. Top left, a generated packing list; top middle, an option to delete a packing item; top right, an option to enter a specific number of shorts; bottom left, example weather forecast for a trip; bottom middle, selecting between multiple pre-made trips; bottom right, the user profile.}
+    \caption{User interface snapshots. Top left, a generated packing list; top middle, the trip creation screen with location auto-complete and Google maps visualization; top right, an option to enter a specific number of shorts; bottom left, example weather forecast for a trip; bottom middle, selecting between multiple pre-made trips; bottom right, the user profile.}
     \label{fig:ui}
 \end{figure}
 
